--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,10 @@ test {
 	useJUnitPlatform()
 }
 
+
+sonarqube {
+    properties {
+        property 'sonar.host.url', 'http://3.111.32.107:9000'
+        property 'sonar.login', '47b1fb11d95101343a2cadbf42da5d947ab965f9'
+    }
+}
